@startuml
class OperasiBilangan {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPenjumlahan {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPengurangan {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPerkalian {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPembagian {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiBilanganCetak {
    +private void cetakSemua(OperasiBilangan[] OB, double a, double b)
}

OperasiPenjumlahan <|-- OperasiBilangan
OperasiPengurangan <|-- OperasiBilangan
OperasiPerkalian <|-- OperasiBilangan
OperasiPembagian <|-- OperasiBilangan
OperasiBilanganCetak --|> OperasiBilangan
@enduml
